# sourcerer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
deploy/: deploy-demo.sh
docs/superpowers/plans/: 2026-06-27-sourcerer-phase1-vertical-slice.md  2026-06-27-sourcerer-phase2-demo.md  2026-06-28-sourcerer-file-grounding.md
docs/superpowers/specs/: 2026-06-27-sourcerer-design.md  2026-06-27-sourcerer-phase2-demo-design.md  2026-06-28-sourcerer-file-grounding-design.md
evals/: golden.json
src/sourcerer/: cli.py  config.py  discovery.py  github.py  ingest.py  llm.py  models.py  pipeline.py  research.py  synthesis.py  trace.py  web.py
src/sourcerer/demo/: generate.py  schema.py
src/sourcerer/evals/: scorers.py
tests/: test_config.py  test_demo_generate.py  test_demo_schema.py  test_discovery.py  test_github.py  test_ingest.py  test_llm.py  test_models.py  test_pipeline.py  test_research.py  test_scorers.py  test_synthesis.py  test_trace.py  test_web.py
web/: README.md  index.html  sourcerer.css  sourcerer.js
