[project]
name = "sourcerer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.7", "httpx>=0.27", "selectolax>=0.3", "litellm>=1.50", "python-dotenv>=1.0"]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
[project.scripts]
sourcerer = "sourcerer.cli:main"
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
